--- a/_includes/photo.html
+++ b/_includes/photo.html
@@ -13,7 +13,7 @@
 
 <li class="item {{ target }}" id="{{ slug }}" style="background-image: url('{{ safe_name | processed_path: 'tint' }}')" title="{{ image.name | strip_extension }}">
 
-	<img class="lazyload" data-src="{{ safe_name | processed_path: 'thumbnail' }}" src="{{ safe_name | processed_path: 'tint' }}" height="{{ image_path | exif: 'height'}}" width="{{ image_path | exif: 'width'}}" />
+	<img loading="lazy" src="{{ safe_name | processed_path: 'thumbnail' }}" height="{{ image_path | exif: 'height'}}" width="{{ image_path | exif: 'width'}}" />
 	<span class="full">
 		<span style="background-image: url('{{ safe_name | processed_path: 'large' }}')"></span>
 	</span>
